--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
     "express": "~4.16.0",
+    "express-slash": "^2.0.1",
     "http-errors": "~1.6.2",
+    "joi": "^14.3.1",
     "mongodb": "^3.2.3",
     "morgan": "~1.9.0",
     "pug": "^2.0.3"
