--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -15,8 +16,14 @@
     "express-slash": "^2.0.1",
     "http-errors": "~1.6.2",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.3",
     "morgan": "~1.9.0",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.0",
     "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "chalk": "^2.4.2"
   }
 }
