--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "boom": "^7.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.3",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "pug": "^2.0.3"
